<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="io.agora.meta.example.ui.game.CoffeeActivity">

    <FrameLayout
        android:id="@+id/unity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/back"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="86dp"
        android:layout_marginTop="31dp"
        android:src="@mipmap/back"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <include
        android:id="@+id/card"
        layout="@layout/card_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/back"
        app:layout_constraintEnd_toStartOf="@+id/users"
        app:layout_constraintTop_toTopOf="@+id/back"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/users"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:layout_marginEnd="4dp"
        android:src="@mipmap/user_list"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/back"
        app:layout_constraintEnd_toStartOf="@+id/mic"
        app:layout_constraintTop_toTopOf="@+id/back"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/mic"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:layout_marginEnd="4dp"
        android:src="@mipmap/microphone_on"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/back"
        app:layout_constraintEnd_toStartOf="@+id/speaker"
        app:layout_constraintTop_toTopOf="@+id/back"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/speaker"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:layout_marginEnd="5dp"
        android:src="@mipmap/voice_on"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/back"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btn_switch_local_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="21dp"
        android:text="@string/hide_local_view"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/speaker" />

    <Button
        android:id="@+id/btn_switch_remote_preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="21dp"
        android:text="@string/btn_switch_remote_preview_camera"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_switch_local_view" />

    <Button
        android:id="@+id/btn_switch_remote_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/hide_remote_view"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:layout_constraintEnd_toStartOf="@id/btn_switch_local_view"
        app:layout_constraintTop_toBottomOf="@id/speaker" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_local_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
    <!--app:layout_constraintWidth_max="@dimen/local_view_max_width"-->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_remote_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_max="@dimen/remote_view_max_width" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="back,card,users,mic,speaker,btn_switch_local_view,btn_switch_remote_preview,btn_switch_remote_view,rv_local_view,rv_remote_view" />

</androidx.constraintlayout.widget.ConstraintLayout>